# fauxproj

./: .gitignore  LICENSE  Makefile  README.md  cli_wrapper.py  pyproject.toml  requirements-dev.txt  tox.ini
src/fauxproj/: cli.py
src/scalib/: cli.py  math.py
tests/: conftest.py  test_cli.py  test_math.py
