[project]
name = "fauxproj"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "pytest",
    "tox",
]

[project.scripts]
fauxproj = "fauxproj.cli:run"

[build.system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
