[project]
name = "fauxproj"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Tristan Slater", email = "hello@trslater.ca"}
]
dependencies = ["numpy"]

[project.optional-dependencies]
dev = [
    "build",
    "flake8",
    "mypy",
    "pytest",
    "tox",
    "twine",
]

[project.urls]
Repository = "https://github.com/trslater/fauxproj.git"

[project.scripts]
fauxproj = "fauxproj.cli:run"

[build.system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
